# xades-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  ns.rs  xml.rs
src/sig/: lt.rs  mod.rs  sign.rs
src/validate/: dsig.rs  mod.rs
tests/: interop.rs
tests/fixtures/: test_roots.pem
