[package]
name = "xades"
version = "0.2.2"
edition = "2024"
description = "Verify and construct XAdES baseline signatures"
license = "Apache-2.0"
homepage = "https://github.com/takakv/rust-xades"
repository = "https://github.com/takakv/rust-xades"
keywords = ["xades", "asice", "eidas", "bdoc", "digidoc"]

[features]
default = ["network"]
network = ["dep:tokio", "tsp-ltv/net"]

[dependencies]
base64 = "0.22.1"
bergshamra-c14n = "0.7.0"
bergshamra-crypto = "0.7.0"
bergshamra-keys = "0.7.0"
bergshamra-xml = "0.7.0"
chrono = "0.4.45"
percent-encoding = "2.3.2"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt"], optional = true }
# default-features = false keeps `reqwest` out of the dependency tree. The
# token and response parsing this crate needs does not require the network;
# only the fetching clients do, and those return with the `network` feature.
tsp-ltv = { version = "0.3.1", default-features = false, features = ["tsp", "ltv"] }
x509-cert = "0.2.5"
der = "0.7.10"
bergshamra-core = "0.7.0"

[dev-dependencies]
asice = "0.2.1"
rcgen = "0.14.8"

[workspace]
members = ["pkcs11"]
exclude = ["vendor"]

# tsp-ltv 0.3.1 only supports <= 64-bit nonces and select ECDSA-SHA2 combinations
[patch.crates-io]
tsp-ltv = { git = "https://github.com/takakv/tsp-ltv.git" }
